Initial Check-in.

--- a/Content/NewTopic.htm
+++ b/Content/NewTopic.htm
@@ -4,6 +4,8 @@
     </head>
     <body>
         <h1>NewTopic</h1>
-        <MadCap:tocProxy class="p.TOC1" />
+        <p>
+            <img src="roles_datause_C.svg" />
+        </p>
     </body>
 </html>
